# ocre-ai

./: .env.docker.example  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  api_client.rest  pyproject.toml
apps/backend/app/: cli.py  main.py
apps/backend/app/core/: logging.py  settings.py
apps/backend/app/models/: auth.py  catalog.py  chat.py  domain.py  fields.py  user.py
apps/backend/app/routes/: auth.py  catalog.py  chat.py  health.py  user.py
apps/backend/app/services/: authentication.py  catalog.py  chat.py  email.py  user_repository.py  vision.py
apps/backend/app/templates/: forgot_password.html
apps/backend/support/: api_client.rest  chat.ipynb
apps/backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_chat.py  test_fields.py  test_settings.py  test_user.py
apps/backend/tests/performance/: .env.example  README.md  locust.conf  locustfile.py
apps/frontend/: .prettierignore  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml
apps/frontend/.claude/: openapi.json
apps/frontend/app/: root.tsx  routes.ts  theme.ts
apps/frontend/app/components/: ColorSchemeToggle.tsx
apps/frontend/app/lib/: auth.ts  init-color-scheme.ts
apps/frontend/app/routes/: catalog-detail.tsx  catalog.tsx  forget-password.tsx  login.tsx  private-layout.tsx  profile.tsx  reset-password.tsx  sign-up.tsx
apps/frontend/app/services/: api.ts  auth.service.ts  chat.service.ts  (+2 more)
docs/: architecture.drawio
(+36 files in other folders)
